--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+ - test-packages
  - test
 
 cache:
@@ -8,23 +9,57 @@ cache:
 variables:
   GIT_DEPTH: "3"
 
+##
+
+.test-packages-template: &test-packages
+  stage: test-packages
+  before_script:
+    - apt-get -q update
+  script:
+    - time t/bin/build-test-packages-if-needed .cache
+  artifacts:
+    paths:
+      - test-packages.tar.xz
+
 .test-template: &test
   stage: test
   before_script:
     - apt-get -q update
     - env DEBIAN_FRONTEND=noninteractive apt-get -q -y -o dir::cache::archives=".cache" build-dep .
-    - time t/bin/build-test-packages-if-needed .cache
   script:
+    - tar xfJ test-packages.tar.xz
     - time t/bin/runtests
+
+##
+
+unstable-test-packages:
+  <<: *test-packages
+  image: debian:unstable
+
+testing-test-packages:
+  <<: *test-packages
+  image: debian:testing
+
+stable-bpo-test-packages:
+  <<: *test-packages
+  image: debian:stable-backports
+
+##
 
 unstable:
   <<: *test
   image: debian:unstable
+  dependencies:
+    - unstable-test-packages
 
 testing:
   <<: *test
   image: debian:testing
+  dependencies:
+    - testing-test-packages
 
 stable-bpo:
   <<: *test
   image: debian:stable-backports
+  dependencies:
+    - stable-bpo-test-packages
