--- a/debian/control
+++ b/debian/control
@@ -87,7 +87,7 @@ Build-Depends:
  zip <!nocheck>,
 Build-Conflicts:
  libperl-critic-pulp-perl <!nocheck>,
-Standards-Version: 4.4.0
+Standards-Version: 4.4.1
 Rules-Requires-Root: no
 Vcs-Git: https://salsa.debian.org/lintian/lintian.git
 Vcs-Browser: https://salsa.debian.org/lintian/lintian
@@ -159,4 +159,4 @@ Description: Debian package checker
  compliance with Debian policy. Every Debian maintainer should check packages
  with this tool before uploading them to the archive.
  .
- This version of Lintian is calibrated for policy version 4.4.0.
+ This version of Lintian is calibrated for Debian Policy version 4.4.1.
