--- a/t/templates/mandatory-docs/changelog.in
+++ b/t/templates/mandatory-docs/changelog.in
@@ -1,17 +1,17 @@
-{$source} ({$version}) {$distribution}; urgency=low
+[% $source %] ([% $version %]) [% $distribution %]; urgency=low
 
   * Lintian Test Suite.
-  * Test: {$testname}
+  * Test: [% $testname %]
 
   * Suppress "should close ITP bug" messages.  (Closes: #123456)
 
- -- {$author}  {$date}
+ -- [% $author %]  [% $date %]
 
-{$source} ({$prev_version}) {$distribution}; urgency=low
+[% $source %] ([% $prev_version %]) [% $distribution %]; urgency=low
 
   * Lintian Test Suite.
-  * Test: {$testname}
+  * Test: [% $testname %]
 
   * Suppress "should close ITP bug" messages.  (Closes: #123456)
 
- -- {$author}  {$prev_date}
+ -- [% $author %]  [% $prev_date %]
