In test suite, adjust builder templates to different paths for sources and destinations.
Makes most paths in the make-based package builders for the test suite
relative to either the build sources or the build destination. The
modifications are similar to those made when adapting Makefiles to
VPATH, although that feature is not used here currently.

This commit is part of a series to build test packages adaptively and
as needed, instead of in bulk. The approach will involve a separation
of test specifications into building and running Lintian. A rebuild is
required only when the build spec has changed (but the form of Lintian
invocation does not matter).

Gbp-Dch: ignore

--- a/t/templates/deb-make-builder/Makefile.in
+++ b/t/templates/deb-make-builder/Makefile.in
@@ -1,9 +1,11 @@
+ROOT_DIR:=$(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
+
 name = [% $source %]
 
 package = $(name).deb
 
-datadir = root
-controldir = DEBIAN
+datadir = $(ROOT_DIR)/root
+controldir = $(ROOT_DIR)/DEBIAN
 
 builddir = build
 debiandir = $(builddir)/DEBIAN
@@ -22,17 +24,34 @@ else
 changelogtarget = $(docdir)/changelog.Debian
 endif
 
-datapack = data.tar.gz
-controlpack = control.tar.gz
+pre_build = $(ROOT_DIR)/pre-build
+pre_data = $(ROOT_DIR)/pre-data
+tar_data = $(ROOT_DIR)/tar-data
+pre_control = $(ROOT_DIR)/pre-control
+tar_control = $(ROOT_DIR)/tar-control
+post_build = $(ROOT_DIR)/post-build
 
-debmembers = $(shell tr '\n' ' ' < deb-members)
-controlmembers = $(shell tr '\n' ' ' < control-members)
+deb_member_source_path = $(ROOT_DIR)/members
+deb_member_build_path = members
+
+debmembers = $(shell tr '\n' ' ' < $(ROOT_DIR)/deb-members)
+controlmembers = $(shell tr '\n' ' ' < $(ROOT_DIR)/control-members)
 
 $(package): fix-perm
-	-mkdir -p $(datadir) $(rootdir)
-	cp -rp $(datadir)/. $(rootdir)
+	-mkdir -p $(deb_member_build_path)
+	if [ -d $(deb_member_source_path) \
+             -a $(deb_member_source_path) -ne $(deb_member_build_path)] ; then \
+		cp -rp $(deb_member_source_path)/. $(deb_member_build_path) ; \
+	fi
 
-	if [ -x ./pre-build ] ; then ./pre-build "$(rootdir)" "$(name)" ; fi
+	-mkdir -p $(rootdir)
+	if [ -d $(datadir) ] ; then \
+		cp -rp $(datadir)/. $(rootdir) ; \
+	fi
+
+	if [ -x $(pre_build) ] ; then \
+		$(pre_build) "$(rootdir)" "$(name)" ; \
+	fi
 
 	-mkdir -p $(docdir)
 	-if [ -f $(changelogfile) ] ; then \
@@ -44,11 +63,18 @@ $(package): fix-perm
 	fi
 
 	# pass package name to pre-data script
-	if [ -x ./pre-data ] ; then ./pre-data "$(rootdir)" "$(name)" ; fi
-	if [ -x ./tar-data ] ; then ./tar-data "$(rootdir)"; fi
+	if [ -x $(pre_data) ] ; then \
+		$(pre_data) "$(rootdir)" "$(name)" ; \
+	fi
 
-	-mkdir $(controldir) $(debiandir)
-	cp -rp $(controldir)/. $(debiandir)
+	if [ -x $(tar_data) ] ; then \
+		$(tar_data) "$(rootdir)" ; \
+	fi
+
+	-mkdir $(debiandir)
+	if [ -d $(controldir) ] ; then \
+		cp -rp $(controldir)/. $(debiandir) ; \
+	fi
 
 	# prevents 'control-file-has-bad-permissions' on CI runners with strange umasks
 	find $(debiandir) -type d -exec chmod 0755 \{\} +
@@ -57,15 +83,22 @@ $(package): fix-perm
 	(cd $(rootdir); find . -type f -a -! -ipath etc -exec md5sum -- \{\} +) > $(debiandir)/md5sums
 
 	# pass package name to pre-control script
-	if [ -x ./pre-control ] ; then ./pre-control "$(debiandir)" "$(name)" ; fi
-	if [ -x ./tar-control ] ; then ./tar-control "$(debiandir)" "$(controlmembers)" ; fi
+	if [ -x $(pre_control) ] ; then \
+		$(pre_control) "$(debiandir)" "$(name)" ; \
+	fi
+	if [ -x $(tar_control) ] ; then \
+		$(tar_control) "$(debiandir)" "$(controlmembers)" ; \
+	fi
 
 	ar rc $(package) $(debmembers)
 
 	# pass package name to post-build script
-	if [ -x ./post-build ] ; then ./post-build "$(name)" ; fi
+	if [ -x $(post_build) ] ; then \
+		$(post_build) "$(name)" ; \
+	fi
 
 
+.PHONY: clean
 clean:
 	rm -f $(package)
 	rm -rf $(builddir)
@@ -80,6 +113,7 @@ clean:
 # AVERAGE CASE.  Tests that need special permissions (anything but
 # 0644 for files and 0755 for dirs) require manually setting the
 # permissions.
+.PHONY: fix-perm
 fix-perm:
 	[ ! -d root/ ] || (find root/ -type d | xargs -r chmod 0755 && \
 			   find root/ -type f | xargs -r chmod 0644)
