--- a/debian/control
+++ b/debian/control
@@ -36,6 +36,7 @@ Build-Depends:
  libcapture-tiny-perl <!nocheck>,
  libcgi-pm-perl <!nocheck>,
  libclass-accessor-perl <!nocheck>,
+ libclass-xsaccessor-perl <!nocheck>,
  libclone-perl <!nocheck>,
  libdigest-sha-perl <!nocheck>,
  libdpkg-perl <!nocheck>,
@@ -114,6 +115,7 @@ Depends:
  libcapture-tiny-perl,
  libcgi-pm-perl,
  libclass-accessor-perl,
+ libclass-xsaccessor-perl,
  libclone-perl,
  libdigest-sha-perl,
  libdpkg-perl,
