Add libpod-coverage-trustpod-perl to Build-Depends.
This module recognizes special annotations as exceptions to POD
coverage testing. Now we can get rid of the module whitelist in
t/scripts/pod-coverage.t. The list was hard to maintain and often
overlooked.

Some Gitlab build failures occurred because modules removed from the
repository were still listed there. Now that error should no longer
occur.

--- a/debian/control
+++ b/debian/control
@@ -53,6 +53,7 @@ Build-Depends:
  libmoo-perl <!nocheck>,
  libnamespace-clean-perl <!nocheck>,
  libpath-tiny-perl <!nocheck>,
+ libpod-coverage-trustpod-perl <!nocheck>,
  libtest-minimumversion-perl <!nocheck>,
  libtest-perl-critic-perl <!nocheck>,
  libtest-pod-coverage-perl <!nocheck>,
