--- a/man/lintian.pod.in
+++ b/man/lintian.pod.in
@@ -169,6 +169,15 @@ attribute (instead of ANSI color escape sequences).
 
 This option overrides the B<color> variable in the configuration file.
 
+=item B<--hyperlinks> (on|off)
+
+Shows text-based hyperlinks to tag descriptions on lintian.debian.org on
+terminals that support it. The default is on for terminals that support
+it, unless the user selected '--color never'. This currently only works
+in GNOME Terminal.
+
+This option overrides the B<color> variable in the configuration file.
+
 =item B<--default-display-level>
 
 Reset the current display level to the default.  Basically, this
