Add libmoox-aliases-perl as Depends: and Build-Depends: in d/control.
A ticket was filed under RT#8026 to also update the packages installed
on lindsay.d.o.

Gbp-Dch: ignore

--- a/debian/control
+++ b/debian/control
@@ -50,6 +50,7 @@ Build-Depends:
  liblist-moreutils-perl <!nocheck>,
  libmldbm-perl <!nocheck>,
  libmoo-perl <!nocheck>,
+ libmoox-aliases-perl <!nocheck>,
  libnamespace-clean-perl <!nocheck>,
  libpath-tiny-perl <!nocheck>,
  libpod-coverage-trustpod-perl <!nocheck>,
@@ -129,6 +130,7 @@ Depends:
  liblist-moreutils-perl,
  libmldbm-perl,
  libmoo-perl,
+ libmoox-aliases-perl,
  libnamespace-clean-perl,
  libpath-tiny-perl,
  libtext-levenshtein-perl,
