Adapt templates to separate specifications for building and evaluation of test packages.
Includes a fixup for commit f5c84080, which was not fully exercised
until the test specifications were split.

This commit is part of a series to allow adaptive and partial building
of test packages. It will ultimately solve Bug#935907.

Gbp-Dch: ignore

--- a/t/templates/changes-simple-filler/Makefile.in
+++ b/t/templates/changes-simple-filler/Makefile.in
@@ -2,9 +2,14 @@ ROOT_DIR:=$(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
 
 product = [% $build_product %]
 
+references = $(ROOT_DIR)/referenced-files
+
 .DEFAULT_GOAL := $(product)
 
 $(product): $(ROOT_DIR)/$(product)
+	if [ -d $(references) ] ; then \
+		cp -rp $(references)/. . ; \
+	fi
 	cp $(ROOT_DIR)/$(product) $(product)
 
 .PHONY: clean
