In builder for deb installation packages, use the right directory when adjusting permissions.
When converting the templates to the separate specifications for the
building and the evaluation of test packages, we missed the adjustment
of permissions.

This issue did not appear on a desktop computer because the Gitlab
runner uses a different, more permissive umask when creating files.

Gbp-Dch: ignore

--- a/t/templates/deb-make-builder/Makefile.in
+++ b/t/templates/deb-make-builder/Makefile.in
@@ -115,5 +115,5 @@ clean:
 # permissions.
 .PHONY: fix-perm
 fix-perm:
-	[ ! -d root/ ] || (find root/ -type d | xargs -r chmod 0755 && \
-			   find root/ -type f | xargs -r chmod 0644)
+	[ ! -d $(rootdir) ] || (find $(rootdir) -type d | xargs -r chmod 0755 && \
+				find $(rootdir) -type f | xargs -r chmod 0644)
