Fix Gitlab runner following the separation of test specifications for building and evaluation.
An improved rebuild logic should bring a reduction in cache
invalidations in the Gitlab runner. Despite the affirmative commit
title, this is an attempt.

From now on, only toolchain changes or updated prerequisites (but not
updated test specifications or templates) should invalidate stored
artifacts. Otherwise, test packages can be carried from one run to the
next. As a result, t/bin/build-test-packages should run more regularly
to update the cached test packages.

For more information, please see:

    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=935907#30

In the recent past, the Gitlab runner may not have been working
optimally.  It seemed to rebuild more often than needed.

This commit is untested.

Gbp-Dch: ignore

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,8 +17,6 @@ variables:
     - tags
   before_script:
     - apt-get -q update
-  script:
-    - time t/bin/build-test-packages-if-needed .cache
   artifacts:
     paths:
       - test-packages.tar.xz
@@ -39,14 +37,20 @@ variables:
 unstable-test-packages:
   <<: *test-packages
   image: debian:unstable
+  script:
+    - time t/bin/build-test-packages-if-needed .cache unstable
 
 testing-test-packages:
   <<: *test-packages
   image: debian:testing
+  script:
+    - time t/bin/build-test-packages-if-needed .cache testing
 
 stable-bpo-test-packages:
   <<: *test-packages
   image: debian:stable-backports
+  script:
+    - time t/bin/build-test-packages-if-needed .cache stable
 
 ##
 
