Adjust test for new locations of obsolete DES routines in glibc >= 2.29-5.
This may fix the build failure in the Gitlab pipeline for unstable. A
recent upload of glibc made it even harder to find the symbol and link
to it. That caused the test binaries-obsolete-des to FTBFS.

More information may be available at:

    https://lists.debian.org/debian-lint-maint/2019/12/msg00081.html
    https://lists.debian.org/debian-glibc/2019/12/msg00021.html

Thanks to Aurelien Jarno for suggesting the changes!

According to the control file for glibc 2.29-5, libc6-dev depends on
libcrypt1-dev. No extra build prerequisites were added to the test.

--- a/t/tags/checks/binaries/binaries-obsolete-des/build-spec/orig/Makefile
+++ b/t/tags/checks/binaries/binaries-obsolete-des/build-spec/orig/Makefile
@@ -6,6 +6,10 @@
 # the obsolete functions, which has to be dug out of libcrypt.so with nm.
 
 LIBCRYPT_FILE := $(shell dpkg -L libc6-dev | grep 'libcrypt\.so$$')
+ifeq "$(LIBCRYPT_FILE)" ""
+LIBCRYPT_FILE := $(shell dpkg -L libcrypt1-dev | grep 'libcrypt\.so$$')
+endif
+
 SYMVER := $(shell nm --dynamic --with-symbol-versions $(LIBCRYPT_FILE) | \
     grep ' setkey@' | cut -d@ -f2)
 
