Add libfonf-ttf-perl to Depends and Build-Depends in d/control.
Also filed for lintian.d.o under RT#8055.

--- a/debian/control
+++ b/debian/control
@@ -42,6 +42,7 @@ Build-Depends:
  libemail-valid-perl <!nocheck>,
  libfile-basedir-perl <!nocheck>,
  libfile-find-rule-perl <!nocheck>,
+ libfont-ttf-perl <!nocheck>,
  libhtml-parser-perl <!nocheck>,
  libio-async-perl <!nocheck>,
  libio-async-loop-epoll-perl <!nocheck>,
@@ -122,6 +123,7 @@ Depends:
  libemail-valid-perl,
  libfile-basedir-perl,
  libfile-find-rule-perl,
+ libfont-ttf-perl,
  libio-async-perl,
  libio-async-loop-epoll-perl (>= 0.20),
  libipc-run-perl,
