In d/control, add libjson-maybexs-perl, libsereal-decoder-perl and libsereal-encoder-perl as prerequisites.
For lintian.d.o, the ticket RT#8090 was filed.

--- a/debian/control
+++ b/debian/control
@@ -48,6 +48,7 @@ Build-Depends:
  libio-async-perl <!nocheck>,
  libio-async-loop-epoll-perl <!nocheck>,
  libipc-run-perl <!nocheck>,
+ libjson-maybexs-perl <!nocheck>,
  libjson-perl <!nocheck>,
  liblist-compare-perl <!nocheck>,
  liblist-moreutils-perl <!nocheck>,
@@ -57,6 +58,8 @@ Build-Depends:
  libnamespace-clean-perl <!nocheck>,
  libpath-tiny-perl <!nocheck>,
  libpod-coverage-trustpod-perl <!nocheck>,
+ libsereal-decoder-perl <!nocheck>,
+ libsereal-encoder-perl <!nocheck>,
  libtest-minimumversion-perl <!nocheck>,
  libtest-perl-critic-perl <!nocheck>,
  libtest-pod-coverage-perl <!nocheck>,
@@ -130,6 +133,7 @@ Depends:
  libio-async-perl,
  libio-async-loop-epoll-perl (>= 0.20),
  libipc-run-perl,
+ libjson-maybexs-perl,
  libjson-perl,
  liblist-compare-perl,
  liblist-moreutils-perl,
@@ -138,6 +142,8 @@ Depends:
  libmoox-aliases-perl,
  libnamespace-clean-perl,
  libpath-tiny-perl,
+ libsereal-decoder-perl,
+ libsereal-encoder-perl,
  libtext-levenshtein-perl,
  libtimedate-perl,
  libtry-tiny-perl,
