Change test prerequisite to libcrypt-dev, following a recent change in glibc.
The fix to Bug#946396 broke our commit afb4535d. We therefore also
adjust that commit according a similar change in glibc. The hope is
that this commit restores the Gitlab build on unstable.

The relevant glibc commit can be found here:

    https://salsa.debian.org/glibc-team/glibc/commit/b6fa329b0e576d1cb11bdd88df6b7df7bde402e0

Adjusts the prerequisite for the test binaries/binaries-obsolete-des
to libcrypt-dev from libcrypt1-dev.

--- a/t/tags/checks/binaries/binaries-obsolete-des/build-spec/orig/Makefile
+++ b/t/tags/checks/binaries/binaries-obsolete-des/build-spec/orig/Makefile
@@ -7,7 +7,7 @@
 
 LIBCRYPT_FILE := $(shell dpkg -L libc6-dev | grep 'libcrypt\.so$$')
 ifeq "$(LIBCRYPT_FILE)" ""
-LIBCRYPT_FILE := $(shell dpkg -L libcrypt1-dev | grep 'libcrypt\.so$$')
+LIBCRYPT_FILE := $(shell dpkg -L libcrypt-dev | grep 'libcrypt\.so$$')
 endif
 
 SYMVER := $(shell nm --dynamic --with-symbol-versions $(LIBCRYPT_FILE) | \
