Update tests since the removal of the the dh_gtkmodules entry in data/debhelper/dh_commands via aad13c71e.
Gbp-Dch: ignore

--- a/t/tags/checks/debhelper/debhelper-no-depends/build-spec/debian/rules
+++ b/t/tags/checks/debhelper/debhelper-no-depends/build-spec/debian/rules
@@ -6,7 +6,7 @@ binary: binary-arch binary-indep
 binary-arch:
 binary-indep:
 	-dh_clideps
-	-dh_gtkmodules
+	-dh_gstscancodecs
 	dh_lisp || true
 	# Should trigger a versioned dependency requirement for dpatch
 	-dh_dpatch_patch
