--- a/debian/control
+++ b/debian/control
@@ -47,6 +47,7 @@ Build-Depends:
  libio-async-perl <!nocheck>,
  libio-async-loop-epoll-perl <!nocheck>,
  libipc-run-perl <!nocheck>,
+ libjson-perl <!nocheck>,
  liblist-compare-perl <!nocheck>,
  liblist-moreutils-perl <!nocheck>,
  libmldbm-perl <!nocheck>,
@@ -127,6 +128,7 @@ Depends:
  libio-async-perl,
  libio-async-loop-epoll-perl (>= 0.20),
  libipc-run-perl,
+ libjson-perl,
  liblist-compare-perl,
  liblist-moreutils-perl,
  libmldbm-perl,
