Replace deprecated node-uglify by uglifyjs in build dependencies

--- a/debian/control
+++ b/debian/control
@@ -78,7 +78,6 @@ Build-Depends:
  libyaml-libyaml-perl <!nocheck>,
  man-db <!nocheck>,
  mingw-w64-tools <!nocheck>,
- node-uglify <!nocheck>,
  patchutils <!nocheck>,
  perl <!nocheck>,
  pkg-js-tools <!nocheck>,
@@ -89,6 +88,7 @@ Build-Depends:
  python3-docutils,
  quilt <!nocheck>,
  t1utils <!nocheck>,
+ uglifyjs <!nocheck>,
  unzip <!nocheck>,
  xz-utils <!nocheck>,
  zip <!nocheck>,
