In d/control, add libdevel-size-perl to Depends and Build-Depends.
In the future, Lintian will generate more memory statistics. This
module was previously optional in that it was only needed for debug
levels 3 and above. From now on, it will be required.

--- a/debian/control
+++ b/debian/control
@@ -37,6 +37,7 @@ Build-Depends:
  libclass-accessor-perl <!nocheck>,
  libclass-xsaccessor-perl <!nocheck>,
  libclone-perl <!nocheck>,
+ libdevel-size-perl <!nocheck>,
  libdigest-sha-perl <!nocheck>,
  libdpkg-perl <!nocheck>,
  libemail-valid-perl <!nocheck>,
@@ -119,6 +120,7 @@ Depends:
  libclass-accessor-perl,
  libclass-xsaccessor-perl,
  libclone-perl,
+ libdevel-size-perl,
  libdigest-sha-perl,
  libdpkg-perl,
  libemail-valid-perl,
